--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,10 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 @import "https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css";
 
+/* html{
+  font-size: 62.5%;
+} */
+
 .container {
   padding-top: 1rem;
 }
